--- a/kindlepocket-web/src/main/resources/templates/index.html
+++ b/kindlepocket-web/src/main/resources/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" ng-app="myApp"
+	  ng-controller="myController">
 <head>
 <meta content="text/html;charset=utf-8" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -14,10 +15,12 @@
 
 <link th:href="@{/imgs/favicon.ico}" rel="shortcut icon" />
 
-<script th:src="@{/js/jquery.min.js}"></script>
-<script th:src="@{/js/flat-ui.min.js}"></script>
-<script th:src="@{/js/application.js}"></script>
-
+<script th:src="@{/js/lib/jquery.min.js}"></script>
+<script th:src="@{/js/lib/flat-ui.min.js}"></script>
+<script th:src="@{/js/lib/application.js}"></script>
+<script th:src="@{/js/lib/angular-1.3.0.js}"></script>
+<script th:src="@{/js/app.js}"></script>
+<script th:src="@{/js/controller/myController.js}"></script>
 <!-- HTML5 shim, for IE6-8 support of HTML5 elements. All other JS at the end of file. -->
 <!--[if lt IE 9]>
       <script src="../../dist/js/vendor/html5shiv.js"></script>
@@ -110,7 +113,7 @@ body {
 
 		<!-- Main component for a primary marketing message or call to action -->
 		<div class="jumbotron">
-			<h1>Kindle Your Kindle</h1>
+			<h1>{{title}}</h1>
 			<!-- <h5 class="demo-panel-title">type keywords of TITLE or AUTHOR</h5> -->
 			<div class="form-group">
 				<input class="form-control typeahead-only input-lg" type="text"
