--- a/kindlepocket-web/src/main/resources/templates/details.html
+++ b/kindlepocket-web/src/main/resources/templates/details.html
@@ -1,22 +1,21 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
+
 <meta content="text/html;charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 <title>Kindle Pocket</title>
 
 <!-- Loading Bootstrap -->
-<link th:href="@{/css/bootstrap/css/bootstrap.min.css}" rel="stylesheet" />
+<link href="/css/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
 
 <!-- Loading Flat UI -->
-<link th:href="@{/css/flat-ui.css}" rel="stylesheet" />
+<link href="/css/flat-ui.css" rel="stylesheet" />
 
-<link th:href="@{/imgs/favicon.ico}" rel="shortcut icon" />
+<link href="/imgs/favicon.ico" rel="shortcut icon" />
 
-<script th:src="@{/js/jquery.min.js}"></script>
-<script th:src="@{/js/flat-ui.min.js}"></script>
-<script th:src="@{/js/application.js}"></script>
+<script src="/js/jquery.min.js"></script>
+<script src="/js/flat-ui.min.js"></script>
+<script src="/js/application.js"></script>
 
 </head>
 <body>
